# openfatture

./: .bumpversion.toml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BEST_PRACTICES_2025.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_IMPROVEMENT_PLAN.md  Dockerfile  Dockerfile.payment  FIX_SUMMARY.md  I18N_EXTRACTION_SUMMARY.md  I18N_INDEX.md  I18N_MIGRATION_GUIDE.md  I18N_REFERENCE_QUICK.txt  I18N_STRINGS_EXTRACTION.md  I18N_STRINGS_STRUCTURED.json  IMPLEMENTATION_SUMMARY.md  Makefile  PHASE_4_1_SUMMARY.md  PHASE_4_2_SUMMARY.md  PHASE_4_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  TEMP_REMAINING_PAGES_TRANSLATIONS.md  categoria_d_summary.md  coverage.json  coverage.xml  docker-compose.yml  init_vector_store.py  mypy.ini  openfatture.db.backup  pyproject.toml  test_ai_assistant_e2e.py  test_lightning_simple.py  validate_tool_schemas.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: deploy-landing.yml  media-generation.yml  media-optimization.yml  media-validation.yml  payment-tests.yml  performance.yml  release.yml  test.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 692d8837_add_prodotto_id_to_riga_fattura.py  c5568d1a4226_add_composite_indexes_for_performance.py
docker/prometheus/: prometheus.yml
docs/: AI_ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  BATCH_OPERATIONS.md  CI_CD_MEDIA_AUTOMATION.md  CLI_REFERENCE.md  CONFIGURATION.md  DEVELOPMENT.md  EMAIL_TEMPLATES.md  HOOKS.md  I18N_CLI_IMPLEMENTATION.md  I18N_CLI_PHASE2_COMPLETE.md  I18N_IMPLEMENTATION_SUMMARY.md  KB_INTEGRATION_BLUEPRINT.md  LIGHTNING_COMPLIANCE_ITALIA.md  LIGHTNING_INTEGRATION.md  LIGHTNING_NETWORK.md  LIGHTNING_TROUBLESHOOTING.md  MEDIA_AUTOMATION.md  MEDIA_CAPTURE_PLAN.md  MEDIA_PRODUCTION_SCHEDULE.md  PAYMENT_TRACKING.md  PDF_GENERATION.md  PERFORMANCE_TESTING.md  PREVENTIVI_SYSTEM.md  QUICKSTART.md  README.md  SECURITY_INTEGRATION_GUIDE.md  SELF_LEARNING.md  TECHNICAL_DEBT.md  WEB_UI_BEST_PRACTICES_2025.md  WEB_UI_GUIDE.md  WEB_UI_MODERNIZATION_COMPLETE.md
docs/guidelines/: BEST_PRACTICES_2025.md  REACT_BEST_PRACTICES.md
docs/history/: FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  NEXT_RELEASE_PLAN.md  PHASE_1_SUMMARY.md  PHASE_2_SUMMARY.md  PHASE_4_1_SUMMARY.md  PHASE_4_2_SUMMARY.md  PHASE_4_3_SUMMARY.md  PHASE_4_SUMMARY.md  ROADMAP.md  categoria_d_summary.md  session_final_summary.md
docs/operations/: SETUP_CI_CD.md
docs/releases/: v1.0.0.md  v1.0.1.md
docs/reports/: COVERAGE_IMPROVEMENT_PLAN.md  COVERAGE_PROGRESS.md  TEST_RESULTS_SUMMARY.md  VALIDATION_REPORT.md
docs/storyboards/: SCENARIO_A_ONBOARDING.md  SCENARIO_B_INVOICE.md  SCENARIO_C_AI.md  SCENARIO_D_BATCH.md  SCENARIO_E_PEC.md
docs/testing/: CUSTOM_COMMANDS_UAT.md
examples/: AI_CHAT_ASSISTANT.md  AI_INVOICE_ASSISTANT.md  AI_TAX_ADVISOR.md  ai_invoice_assistant.py  ai_tax_advisor.py  email_templates_example.py  i18n_demo.py  payment_examples.py  pdf_examples.py
examples/hooks/: README.md  on-sdi-notification.sh  post-ai-command.py  post-batch-import.sh  post-client-create.py  post-invoice-create-backup.py  post-invoice-send-slack.sh
landing-page/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
landing-page/public/: CNAME
makefiles/: README.md  ai.mk  base.mk  ci.mk  docker.mk  media.mk  test.mk
media/: alerts_config.json  dashboard.html  dashboard_api.py
media/automation/: README.md  scenario_a.tape  scenario_d_batch.tape  scenario_e_pec.tape
media/metrics/: costs.json  performance.json  runs.json
media/presets/: README.md
openfatture/: __init__.py  exceptions.py  test_lightning_simple.py
openfatture/ai/: __init__.py
openfatture/cli/: lifespan.py  main.py  wizard.py
openfatture/i18n/: README.md  __init__.py  context.py  formatters.py  loader.py  translator.py
openfatture/lightning/: __init__.py
openfatture/payment/: README.md  __init__.py  metrics.py
openfatture/plugins/: __init__.py  base.py  discovery.py  registry.py
openfatture/services/: dashboard.py
openfatture/storage/: session.py
openfatture/utils/: async_bridge.py  config.py  logging.py  metrics.py  rate_limiter.py  retry.py  security.py
openfatture/web/: README.md  app.py  app_modern.py  navigation.py
openfatture/web_scraper/: __init__.py  agent.py  config.py  extractor.py  models.py  scraper.py  service.py  sources.json
scripts/: _cli_introspect.py  _fix_ftl_blank_values.py  _strip_emojis.py  capture_screenshots.py  check_ollama.sh  collect_media_metrics.py  generate_cli_ftl.py  generate_gifs.sh  init_vector_store.py  migrate_config.py  notifications.py  optimize_videos.sh  reset_demo.py  reset_demo.sh  save_performance_baseline.sh  setup-act-secrets.sh  test-actions.sh  validate-actions.sh  validate_tool_schemas.py
stubs/: collect_media_metrics.pyi
stubs/grpc/: __init__.pyi  aio.pyi
stubs/openfatture/: __init__.pyi
stubs/plotly/: __init__.pyi  express.pyi  graph_objects.pyi
tests/: conftest.py
tests/ai/: conftest.py  test_anthropic_integration.py  test_cache_config.py  test_invoice_assistant_integration.py  test_invoice_assistant_unit.py  test_invoice_creation_workflow.py  test_native_tool_calling.py  test_ollama_integration.py  test_openai_integration.py  test_orchestration_states.py  test_property_based.py  test_react_e2e_ollama.py  test_react_orchestration.py  test_react_orchestration_integration.py  test_streaming.py  test_tax_advisor_integration.py  test_token_counter.py  test_tools_circuit_breaker.py  test_tools_client.py  test_tools_invoice.py  test_tools_knowledge.py  test_tools_models.py  test_tools_registry_openai_format.py
tests/cli/: test_ai_commands.py  test_ai_validation.py  test_cliente_commands.py  test_cliente_commands_unit.py  test_config_commands.py  test_custom_commands.py  test_events.py  test_fattura_commands.py  test_fattura_commands_unit.py  test_fattura_events.py  test_init_commands.py  test_lightning_compliance_commands.py  test_pec_commands.py  test_rag_validation.py  test_report_commands.py  test_wizard.py
tests/core/: test_preventivo_service.py  (+1 more)
(+500 files in other folders)
